--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.3",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
