--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-native": "^12.1.3",
     "react": "18.2.0",
     "react-native": "0.72.3"
   },
