--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@testing-library/jest-dom": "^5.17.0",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
@@ -31,6 +32,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
+    "react-dom": "^18.2.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
