--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.1.3",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,17 +23,34 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/mocha": "^10.0.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.2",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.test.ts?(x)"
+    ],
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary"
+    ]
   }
 }
