--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
     "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react-native": "^12.1.3",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
@@ -34,6 +35,7 @@
     "prettier": "^2.4.1",
     "react-dom": "^18.2.0",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "4.8.4"
   },
   "engines": {
