--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-native": "^12.1.3",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +30,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
